paginate the get_neighbors api
